syntax = "proto3";

package poslah.signing;

service SigningService {
  // Issues a new short-lived JWT for the calling service.
  // Authentication is handled via the mTLS connection context.
  rpc IssueToken(IssueTokenRequest) returns (IssueTokenResponse);
}

message IssueTokenRequest {
  // No fields needed, as identity is derived from mTLS.
}

message IssueTokenResponse {
  // The signed JWT string.
  string access_token = 1;
  // The token's lifetime in seconds
  int32 expires_in = 2;
}
